# Owist-modelfile-lint

./: .gitignore  CHANGELOG.md  Company.md  LICENSE  README.md  pyproject.toml
examples/: Modelfile.broken  Modelfile.sophia
src/owist_modelfile_lint/: __init__.py  checks.py  cli.py  gguf_sniff.py  issues.py  lint_api.py  params.py  parser.py
tests/: test_gguf_sniff.py  test_lint_integration.py  test_params.py  test_parser.py
